--- a/TODO
+++ b/TODO
@@ -1,12 +1,1 @@
-
-Checklist: https://en.bitcoin.it/wiki/Protocol_rules
-
-- block sigops total, not just count them.
-- difficulty.
-- subsidy.
-- median time.
-- reorg.
-- TX_SCRIPTHASH
-- TX_MULTISIG
-- peerman: fix bn_group()
-
+See https://github.com/libbitc/libbitc/wiki/TODO-List
